# electricity_oslo_kommune

./: .gitignore  README.md  allocate_bydel_to_data.py  allocate_clostest_weather_station.py  allocate_location_to_el_data.py  analyse_electricity_city.py  analyse_electricity_weather.py  map_measurments.py  pyproject.toml
api_connections/: weather_api_connection.py
map_visualisations/: average_ladestasjoner_forbruk_map.html  average_map.html  oslo_electricity_map.html
utils/: loading_funcs.py  transformations.py  visualisation_funcs.py
